// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppPricingPermissionsSection should match a snapshot for desktop 1`] = `
<AppPricingPermissionsSection
  app={
    Object {
      "desktopIntegrationTypeIds": Array [
        "ID",
      ],
      "developer": "APP_DEVELOPER",
      "name": "APP_NAME",
    }
  }
  desktopIntegrationTypes={
    Array [
      Object {
        "description": "DESCRIPTION",
        "id": "ID",
        "name": "NAME",
      },
    ]
  }
  isDesktop={true}
>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Desktop Integration
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
    </ElBodyText>
  </BodyText>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
        >
          click here
        </a>
      </p>
    </ElBodyText>
  </BodyText>
  <Grid
    className="el-mb11"
  >
    <ElGrid
      className="el-mb11"
    >
      <div
        className="el-mb11 el-grid"
      >
        <Col
          key="NAME"
        >
          <ElCol
            className=""
          >
            <div
              className="el-col"
            >
              DESCRIPTION
            </div>
          </ElCol>
        </Col>
      </div>
    </ElGrid>
  </Grid>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Pricing Information
      </h2>
    </ElSubtitle>
  </Subtitle>
  <div
    className="el-mb11"
  >
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
          APP_DEVELOPER
          . Please contact 
          APP_DEVELOPER
           directly for information about pricing.
        </p>
      </ElBodyText>
    </BodyText>
  </div>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Data Permissions
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
    </ElBodyText>
  </BodyText>
  0
</AppPricingPermissionsSection>
`;

exports[`AppPricingPermissionsSection should match a snapshot for has a pricing uri 1`] = `
<AppPricingPermissionsSection
  app={
    Object {
      "desktopIntegrationTypeIds": Array [
        "ID",
      ],
      "developer": "APP_DEVELOPER",
      "name": "APP_NAME",
      "pricingUrl": "SOME_URL",
    }
  }
  desktopIntegrationTypes={
    Array [
      Object {
        "description": "DESCRIPTION",
        "id": "ID",
        "name": "NAME",
      },
    ]
  }
  isDesktop={true}
>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Desktop Integration
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
    </ElBodyText>
  </BodyText>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="agencycloud://process/webpage?url=https://marketplace-documentation.reapit.cloud/integration-types"
        >
          click here
        </a>
      </p>
    </ElBodyText>
  </BodyText>
  <Grid
    className="el-mb11"
  >
    <ElGrid
      className="el-mb11"
    >
      <div
        className="el-mb11 el-grid"
      >
        <Col
          key="NAME"
        >
          <ElCol
            className=""
          >
            <div
              className="el-col"
            >
              DESCRIPTION
            </div>
          </ElCol>
        </Col>
      </div>
    </ElGrid>
  </Grid>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Pricing Information
      </h2>
    </ElSubtitle>
  </Subtitle>
  <div
    className="el-mb11"
  >
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          APP_DEVELOPER
           have specified that there is a cost for using this App/Integration, please
           
          <a
            href="agencycloud://process/webpage?url=SOME_URL"
          >
            click here
          </a>
           
          to view their pricing information. You will be billed directly by 
          APP_DEVELOPER
          .
        </p>
      </ElBodyText>
    </BodyText>
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          You will not be charged by Reapit Ltd for any costs associated with using this App/Integration.
        </p>
      </ElBodyText>
    </BodyText>
  </div>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Data Permissions
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
    </ElBodyText>
  </BodyText>
  0
</AppPricingPermissionsSection>
`;

exports[`AppPricingPermissionsSection should match a snapshot for not desktop 1`] = `
<AppPricingPermissionsSection
  app={
    Object {
      "desktopIntegrationTypeIds": Array [
        "ID",
      ],
      "developer": "APP_DEVELOPER",
      "name": "APP_NAME",
    }
  }
  desktopIntegrationTypes={
    Array [
      Object {
        "description": "DESCRIPTION",
        "id": "ID",
        "name": "NAME",
      },
    ]
  }
  isDesktop={false}
>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Desktop Integration
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        This app requires the following Desktop Integration. Some integration types may replace or change certain behaviours within Agency Cloud.
      </p>
    </ElBodyText>
  </BodyText>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        For more information regarding Desktop Integration types, please
         
        <a
          href="https://marketplace-documentation.reapit.cloud/integration-types"
          rel="noopener noreferrer"
          target="_blank"
        >
          click here
        </a>
      </p>
    </ElBodyText>
  </BodyText>
  <Grid
    className="el-mb11"
  >
    <ElGrid
      className="el-mb11"
    >
      <div
        className="el-mb11 el-grid"
      >
        <Col
          key="NAME"
        >
          <ElCol
            className=""
          >
            <div
              className="el-col"
            >
              DESCRIPTION
            </div>
          </ElCol>
        </Col>
      </div>
    </ElGrid>
  </Grid>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Pricing Information
      </h2>
    </ElSubtitle>
  </Subtitle>
  <div
    className="el-mb11"
  >
    <BodyText
      hasGreyText={true}
    >
      <ElBodyText
        className="el-has-grey-text"
      >
        <p
          className="el-has-grey-text el-body-text"
        >
          There may be a cost associated to using this App/Integration. However, this information has not yet been provided by 
          APP_DEVELOPER
          . Please contact 
          APP_DEVELOPER
           directly for information about pricing.
        </p>
      </ElBodyText>
    </BodyText>
  </div>
  <Subtitle>
    <ElSubtitle
      className=""
    >
      <h2
        className="el-subtitle"
      >
        Data Permissions
      </h2>
    </ElSubtitle>
  </Subtitle>
  <BodyText
    hasGreyText={true}
  >
    <ElBodyText
      className="el-has-grey-text"
    >
      <p
        className="el-has-grey-text el-body-text"
      >
        By installing this app, you are granting the following permissions to your data:
      </p>
    </ElBodyText>
  </BodyText>
  0
</AppPricingPermissionsSection>
`;
